#30 #32 #33 delete button style applied, spacing issue fixed & font size is consistent

--- a/css/style.css
+++ b/css/style.css
@@ -130,8 +130,8 @@ body {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  width: 30px;
-  height: 30px;
+  width: 50px;
+  height: 50px;
   background-color: transparent;
   background-image: url(../assets/back.svg);
   background-position: center;
@@ -159,7 +159,8 @@ body {
   padding: 15px;
   background-color: blue;
   color: white;
-  font-size: 18pt;
+  font-size: 21pt;
+  position: relative;
 }
 
 #savedList li:hover {
@@ -174,6 +175,17 @@ body {
 /* Delete Button */
 
 .deleteBtn {
-  float: right;
-  vertical-align: middle;
+  width: 20px;
+  height: 20px;
+  outline: none;
+  border: none;
+  background-color: transparent;
+  background-image: url(../assets/recycle.png);
+  background-position: center;
+  background-size: 100%;
+  background-repeat: no-repeat;
+  border-radius: 50%;
+  position: absolute;
+  right: 20px;
+  margin-top: 6px;
 }
